--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-middleware": "~2.2.1",
     "mongodb": "^4.1.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0"
   }
